[package]
name = "liquidity-check"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.7.0" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", version = "0.7.0" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", version = "0.7.0" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", version = "0.7.0" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", version = "0.7.0" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", version = "0.7.0", default-features = false }

alloy-core = { version = "0.8.7", default-features = false }
alloy-dyn-abi = { version = "0.8.7", default-features = false }
alloy-json-abi = { version = "0.8.7", default-features = false }
alloy-primitives = { version = "0.8.7", default-features = false }
alloy-sol-types = { version = "0.8.7", default-features = false }

eyre = "0.6.12"
clap = { version = "4.5.16", features = ["derive"] }

tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread"] }
serde_json = "1.0.133"
serde = "1.0.215"


